# v2-mini-robot

./: .gitignore  README.md  ROS Documentation.odt  V2MINI_ROSDocs.odt
Arduino/libraries/ros_lib/grizzly_msgs/: Ambience.h  Drive.h  RawStatus.h
Arduino/libraries/ros_lib/realsense_camera/: cameraConfiguration.h
Arduino/ros-ultrasonics/: ros-ultrasonics.ino
v2mini/: CMakeLists.txt  package.xml
v2mini_controllers/: CMakeLists.txt  dynamixel_params.yaml  joints_trajectory_controller.yaml  package.xml  tilt.yaml
v2mini_controllers/launch/: controller_manager.launch  right_arm_controller.launch  start_meta_controller.launch  start_tilt_controller.launch
v2mini_controllers/scripts/: dynamixel_joint_state_publisher.py
v2mini_description/: CMakeLists.txt  package.xml
v2mini_description/config/: control.yaml
v2mini_description/launch/: description.launch  display.launch  display_arm.launch  display_base.launch  display_body.launch  display_v2mini.launch  gazebo_description.launch
v2mini_description/meshes/arm/: arm_link1.stl  arm_link2.stl  arm_link3.stl  arm_link4.stl  arm_link5.stl  arm_link6.stl
v2mini_description/meshes/base/: base.stl  base_wheel.stl  v2mini_base.stl
v2mini_description/meshes/head/: head.stl  neck.stl
v2mini_description/meshes/torso/: torso.stl
v2mini_description/rviz/: urdf.rviz
v2mini_description/urdf/: v2mini.urdf  v2mini_arm.urdf.xacro  v2mini_base.urdf.xacro  v2mini_body.urdf.xacro  v2mini_head.urdf.xacro  v2mini_robot.urdf.xacro
v2mini_description/urdf/sensors/: r200.urdf.xacro
v2mini_gazebo/: CMakeLists.txt  README.md  package.xml
v2mini_gazebo/config/: v2mini_arm_controller.yaml
v2mini_gazebo/launch/: description.launch  gazebo_description.launch  v2mini_empty_world.launch
v2mini_gazebo/urdf/: v2mini_robot.gazebo.xacro
v2mini_gazebo/urdf/transmission/: v2mini_arm.transmission.xacro
v2mini_init/: CMakeLists.txt  package.xml  v2mini.machine  v2mini_env.sh
v2mini_init/firmware/: CMakeLists.txt  baseware.cpp  mega_baseware.cpp  mega_torsoware.cpp  megaware.cpp  torsoware.cpp  uno_headware.cpp  unoware.cpp
v2mini_init/firmware/libraries/: XL320.cpp  XL320.h  dxl_pro.h
v2mini_init/launch/: devices.launch
v2mini_init/udev/: 97-v2mini.rules
v2mini_motion/: CMakeLists.txt  package.xml  v2mini.machine
v2mini_motion/include/: keyboard_input.h
v2mini_motion/include/v2mini_motion/: robot_controller.h
v2mini_motion/launch/: control_motion.launch  motion_direct.launch  motion_remote.launch
v2mini_motion/src/: motion_control.cpp  robot_controller.cpp
v2mini_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
v2mini_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml  stomp_config.yaml  stomp_planning.yaml  v2mini.srdf
v2mini_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_moveit_planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  v2mini_moveit_controller.launch  v2mini_moveit_controller_manager.launch.xml  warehouse.launch
v2mini_movit_config/: .setup_assistant  package.xml
v2mini_movit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  v2mini.srdf
v2mini_movit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
v2mini_robot/: CMakeLists.txt  package.xml
v2mini_teleop/: CMakeLists.txt  package.xml
v2mini_teleop/include/v2mini_teleop/: teleop_controller.h
v2mini_teleop/launch/: teleop.launch
v2mini_teleop/scripts/: random_arm.py
v2mini_teleop/src/: teleop.cpp  teleop_controller.cpp
v2mini_telop/: package.xml
v2mini_telop/include/v2mini_telop/: user_inputs.h
v2mini_telop/launch/: telop.launch
v2mini_telop/src/: telop.cpp  user_inputs.cpp
