<?xml version="1.0"?>
<package>
    <name>v2mini_init</name>
    <version>0.0.0</version>
    <description>Init the V2-Mini Robot.
    </description>

    <maintainer email="v2-mini@todo.todo">v2-mini</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosserial_arduino</build_depend>
    <build_depend>rosserial_client</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>rosserial_arduino</run_depend>
    <run_depend>rosserial_client</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
